Whitespace fix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -74,7 +74,7 @@ a {
 .navbar {
   padding-right: 100px;
   padding-left: 100px;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
   background: none;
   font-size: 14px;
   border: none;
